crates/mensura-cli/tests/corpus/reject/empty_enum.mensura
// Rejected at parse: an enum needs at least one variant.
enum Status { }
